v1 refactor round1