@@ -1,47 +1,40 @@
 package com.arpi.subeditor.parser;
 
-import java.io.IOException;
-import java.nio.charset.StandardCharsets;
-import java.nio.file.Path;
-import java.nio.file.Paths;
-import static java.nio.file.Files.*;
-import java.text.SimpleDateFormat;
-import java.sql.Timestamp;
+import com.arpi.subeditor.model.Pair;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 
-public class Setter {
-    public void modifyTimestampsAndExport(List<SubEntry> subEntriesFromParser, double modifierInSecs, String originalName) {
+public class TimingModifierService {
+    public List<SubEntry> modifySubentriesTiming(List<SubEntry> subEntriesFromParser, double modifierInSecs, String originalName) {
         for (SubEntry entry : subEntriesFromParser) {
             String timingLine = entry.timing;
-            ArrayList<String> timestamps = new ArrayList<String>();
+            Pair<String> timestamps = new Pair<String>();
             timestamps = getTimestampsAsStrings(timingLine);
-            String adjustedTimestamp1 = adjustTime(timestamps.get(0), modifierInSecs);
-            String adjustedTimestamp2 = adjustTime(timestamps.get(1), modifierInSecs);
+            String adjustedTimestamp1 = adjustTime(timestamps.getFirst(), modifierInSecs);
+            String adjustedTimestamp2 = adjustTime(timestamps.getSecond(), modifierInSecs);
 
             entry.timing = adjustedTimestamp1 + " --> " + adjustedTimestamp2;
         }
-        exportFile(objectsToString(subEntriesFromParser), originalName);
+        return subEntriesFromParser;
     }
 
-    public ArrayList<String> getTimestampsAsStrings(String timestampsWithArrow) {
-        ArrayList<String> timestamps = new ArrayList<String>();
+    private Pair getTimestampsAsStrings(String timestampsWithArrow) {
+        Pair<String> timestamps = new Pair<String>();
         // get timestamps as strings and put them in array
-        Pattern singleTimestampPattern = Pattern.compile("\\d{2}:\\d{2}:\\d{2},\\d{3}");
-        // Pattern singleTimestampPattern = Pattern.compile("[0-9][0-9]:[0-9][0-9]:[0-9][0-9],[0-9][0-9][0-9]");
+        Pattern singleTimestampPattern = Pattern.compile("(\\d{2}:\\d{2}:\\d{2},\\d{3}) --> (\\d{2}:\\d{2}:\\d{2},\\d{3})");
         Matcher singleTimestampMatcher = singleTimestampPattern.matcher(timestampsWithArrow);
 
-        while (singleTimestampMatcher.find()) {
-            String timestamp = singleTimestampMatcher.group();
-            timestamps.add(timestamp);
-        }
+        singleTimestampMatcher.find();
+        timestamps.setFirst(singleTimestampMatcher.group(1));
+        timestamps.setSecond(singleTimestampMatcher.group(2));
+
         //System.out.println(timestamps);
         return timestamps;
     }
 
-    public String adjustTime(String originalTimestamp, double adjustBySecs) {
+    private String adjustTime(String originalTimestamp, double adjustBySecs) {
         String newTimestamp = "";
 //        System.out.println(originalTimestamp);
 
@@ -102,28 +95,5 @@ public class Setter {
         return newTimestamp;
     }
 
-    public String objectsToString (List<SubEntry> updatedSubentries) {
-        String finalStringContent = "";
 
-        for (SubEntry object : updatedSubentries) {
-            finalStringContent = finalStringContent.concat(object.index + "\n");
-            finalStringContent = finalStringContent.concat(object.timing + "\n");
-            finalStringContent = finalStringContent.concat(object.text + "\n");
-        }
-        System.out.println("cx: " + finalStringContent);
-        return finalStringContent;
-    }
-
-    public void exportFile (String contentToWrite, String fileNameOriginal) {
-        SimpleDateFormat dateFormatForFilename = new SimpleDateFormat("yyyy-MM-dd_HH-mm-ss");
-        Timestamp timestampForFilename = new Timestamp(System.currentTimeMillis());
-
-        Path outputPath = Paths.get("C:\\dev\\JavaTraining\\SubEditor\\outputfiles\\"+ fileNameOriginal + "_" + dateFormatForFilename.format(timestampForFilename) + ".srt");
-
-        try {
-            writeString(outputPath, contentToWrite, StandardCharsets.UTF_8);
-        } catch (IOException ex) {
-            ex.printStackTrace();
-        }
-    }
 }
